--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/mapped-types": "*",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/typeorm": "^11.0.0",
@@ -37,6 +38,8 @@
     "bcrypt": "^6.0.0",
     "class-validator": "^0.14.2",
     "nodemailer": "^7.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "paystack": "^2.0.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
@@ -52,6 +55,8 @@
     "@types/jest": "^29.5.2",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.3.1",
+    "@types/passport": "^0",
+    "@types/passport-jwt": "^4",
     "@types/paystack": "^2",
     "@types/pg": "^8",
     "@types/supertest": "^6.0.0",
