--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "@nestjs/typeorm": "^11.0.0",
     "@supabase/supabase-js": "^2.49.9",
     "bcrypt": "^6.0.0",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "date-fns": "^4.1.0",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
