--- a/package.json
+++ b/package.json
@@ -39,10 +39,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "date-fns": "^4.1.0",
+    "json2csv": "^6.0.0-alpha.2",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "paystack": "^2.0.1",
+    "pdfkit": "^0.17.1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
@@ -61,6 +63,7 @@
     "@types/passport": "^0",
     "@types/passport-jwt": "^4",
     "@types/paystack": "^2",
+    "@types/pdfkit": "^0",
     "@types/pg": "^8",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
